# Double-Selection

./: .gitignore  README.md
matlab/: readme.txt
matlab/functions/: DS.m
matlab/glmnet_matlab/: timestwo.mexmaci64
matlab/main/: main.csv  main.m  plot_figure1.m
matlab/robustness/: robustness.csv  robustness.m  robustness_stepwise.m
python/: README.md  main.py  plot_figure1.py  pyproject.toml  robustness.py  simulation.py
python/csv/: figure1_rates.csv  main.csv  robustness.csv  robustness_stepwise.csv
python/data/: factors.csv  port202.csv  summary.csv
python/module/: __init__.py  core.py  glmnet_adapter.py  inference.py  selection.py  utils.py
python/module/workflows/: __init__.py  base.py  figures.py  main.py  robustness.py  simulation.py  stepwise.py
