[project]
name = "Double-Selection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"matplotlib>=3.9.4",
	"numpy>=2.0.2",
	"pandas>=2.3.3",
	"scikit-learn>=1.6.1",
	"scipy>=1.13.1",
	"statsmodels>=0.14.6",
	"tqdm>=4.67.1",
	"joblib>=1.4.0",
	"glmnet_python @ git+https://github.com/bbalasub1/glmnet_python.git",
]
